update profile now works

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -24,7 +24,8 @@
       <%= f.label :password_confirmation, "Confirm Password" %>
       <%= f.password_field :password_confirmation %>
 
-      <%= f.submit "Save changes" %>
+      <%#= f.submit "Save changes" %>
+      <button name="commit" type="submit">Save Changes</button>
     <% end %>
 
 </div>
